# smush-rs

./: .gitignore  .travis.yml  CHANGES.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
examples/: main.rs
src/: encoding.rs  error.rs  identity.rs  lib.rs  utilities.rs
src/codecs/: base58.rs  bincode.rs  brotli.rs  deflate.rs  gzip.rs  lz4.rs  lzma.rs  lzma2.rs  mod.rs  xz.rs  zlib.rs  zstd.rs
