[package]
name = "smush"
version = "0.1.1"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Common rust abstraction around a variety of compression codecs."
homepage = "https://github.com/gwihlidal/smush-rs"
repository = "https://github.com/gwihlidal/smush-rs"
readme = "README.md"
keywords = ["data", "encode", "compress", "decompress", "pipeline"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bs58 = "0.2.2"
flate2 = "1.0.6"
brotli = "3.1.8"
lzma-rs = "0.1.0"
lz4 = "1.23.1"
zstd = { version="0.4.22+zstd.1.3.8", default-features = false }
bincode = "1.0.1"