[package]
name = "smush"
version = "0.1.2"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Common rust abstraction around a variety of compression codecs."
homepage = "https://github.com/gwihlidal/smush-rs"
repository = "https://github.com/gwihlidal/smush-rs"
readme = "README.md"
keywords = ["data", "encode", "compress", "decompress", "pipeline"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/smush-rs" }
maintenance = { status = "actively-developed" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
bincode = { version = "1.0.1", optional = true }
brotli = { version = "3.1.8", optional = true }
bs58 = { version = "0.2.2", optional = true }
flate2 = { version = "1.0.6", optional = true }
lzma-rs = { version = "0.1.0", optional = true }
lz4 = { version = "1.23.1", optional = true }
zstd = { version="0.4.22+zstd.1.3.8", default-features = false, optional = true }

[features]
default = ["all"]
all = ["base58", "bincode", "brotli", "deflate", "gzip", "lzma", "lz4", "zlib", "zstd"]
base58 = ["bs58"]
deflate = ["flate2"]
gzip = ["flate2"]
lzma = ["lzma-rs"]
zlib = ["flate2"]
