[package]
name = "smush"
version = "0.1.4"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Common rust abstraction around a variety of compression codecs."
homepage = "https://github.com/gwihlidal/smush-rs"
repository = "https://github.com/gwihlidal/smush-rs"
readme = "README.md"
keywords = ["data", "encode", "compress", "decompress", "pipeline"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/smush-rs" }
maintenance = { status = "actively-developed" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dev-dependencies]
elapsed = "0.1.2"

[dependencies]
bincode = { version = "1.2.0", optional = true }
brotli = { version = "3.3.0", optional = true }
bs58 = { version = "0.3.0", optional = true }
flate2 = { version = "1.0.13", optional = true }
xz2 = { version = "0.1.6", optional = true }
lz4 = { version = "1.23.1", optional = true }
zstd = { version="0.5.1+zstd.1.4.4", default-features = false, optional = true }

[features]
default = ["all"]
all = [
    "bincode_support",
    "brotli_support",
    "base58_support",
    "deflate_support",
    "gzip_support",
    "xz_support",
    "lz4_support",
    "zlib_support",
    "zstd_support",
    "custom_support",
]
base58_support = ["bs58"]
bincode_support = ["bincode"]
brotli_support = ["brotli"]
deflate_support = ["flate2"]
gzip_support = ["flate2"]
lz4_support = ["lz4"]
xz_support = ["xz2"]
zlib_support = ["flate2"]
zstd_support = ["zstd"]
custom_support = []